--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 	<h1> <b> INITIALIZATION PAGE</b></h1>
-	<link type="text/css" rel="stylesheet" href= "1calorie_init.css">
+	<link type="text/css" rel="stylesheet" href= "index.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
 </head>
 <body>
 <div id="run_init">
+<p>CLICK ON RUN INIT ONLY IF YOU ARE STARTING A NEW SESSION. ELSE GO TO HOME PAGE.</p>
 <button onclick="save_data()">RUN INITIALIZATION</button> <br>
 <p id = "result"></p>
 </div>
