--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<h1> <b> INITIALIZATION PAGE</b></h1>
-	<link type="text/css" rel="stylesheet" href= "index.css">
+	<link type="text/css" rel="stylesheet" href= "index_css.css">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
